Tests/Runtime2/Error/Call/.build/catcherror.pr
[
  {
    "name": "CatchError",
    "description": "Build goal CatchError",
    "comment": null,
    "steps": [
      {
        "index": 0,
        "text": "set %caughtMessage% = %!error.Message%",
        "lineNumber": 2,
        "indent": 0,
        "comment": null,
        "actions": [
          {
            "module": "variable",
            "action": "set",
            "parameters": [
              {
                "name": "Name",
                "value": "%caughtMessage%",
                "type": "string"
              },
              {
                "name": "Value",
                "value": "%!error.Message%",
                "type": "object"
              }
            ],
            "return": null,
            "defaults": null
          }
        ],
        "intent": null,
        "onError": null,
        "cache": null,
        "timeout": null,
        "waitForExecution": true
      }
    ],
    "subGoals": [],
    "visibility": 1,
    "path": "/CatchError.goal",
    "prPath": "/.build/catcherror.pr",
    "hash": "e0c6c59c2f69f86595162877a2a5796ede74af5a3074201db9a8dd56c0c7fa4d",
    "builderVersion": "0.2.1",
    "isSetup": false,
    "isEvent": false,
    "isSystem": false,
    "isTest": false,
    "inputParameters": null
  }
]